# epi-sign

./: LOCAL_SETUP.md  README.md  compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2026-01-23-142152_add_signature_manuscrite/: down.sql  up.sql
backend/migrations/2026-01-23-142640_fix_edsquare_cookies_table/: down.sql  up.sql
backend/migrations/2026-01-23-142642_create_edsquare_cookies/: down.sql  up.sql
backend/migrations/2026-01-23-150000_add_user_id_to_edsquare_cookies/: down.sql  up.sql
backend/migrations/2026-01-29-160000_create_edsquare_credentials/: down.sql  up.sql
backend/migrations/2026-01-30-120000_create_user_signatures/: down.sql  up.sql
backend/scripts/: create_user.bat  create_user.sh  create_user.sql  delete_user.sh
backend/src/: schema.rs
backend/src/api/: mod.rs
backend/src/api/admin/: endpoints.rs  mod.rs
backend/src/api/auth/: endpoints.rs
backend/src/api/auth/models/: payloads.rs
backend/src/api/edsquare/: endpoints.rs  mod.rs  models.rs  services.rs
backend/src/api/sign/: endpoints.rs  models.rs
backend/src/api/swagger/: models.rs
backend/src/api/users/: endpoints.rs  mod.rs  models.rs  services.rs
backend/src/misc/: mod.rs  router.rs  state.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/lib/components/: EdsquareResults.svelte  ProfileMenu.svelte  ProfileUpdater.svelte  QRScanner.svelte  SignResults.svelte  SignatureCanvas.svelte  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
(+9 files in other folders)
